--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     </div>
 
     <div class="medio">
-        <div class="tarjetas">hola</div>
-        <div class="tarjetas">como</div>
-        <div class="tarjetas">estas</div>
+        <div class="tarjetas"><img class="catalogo" src="fotos/nike-running.jpg"> </div>
+        <div class="tarjetas"><img class="catalogo" src="fotos/ropa-nike.jpg"></div>
+        <div class="tarjetas"><img class="catalogo" src=""></div>
     </div>
 
     <div class="abajo">
