--- a/index.html
+++ b/index.html
@@ -127,3 +127,39 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+<div class="container">
+    <div class="row">
+      <!-- Logo -->
+      <div class="col-md-4 text-center footer-logo">
+        <img src="https://via.placeholder.com/120" alt="Logo de la empresa">
+      </div>
+      <!-- Ubicación -->
+      <div class="col-md-4 text-center footer-location">
+        <h5>Ubicación</h5>
+        <p>
+          Calle Ficticia 123<br>
+          Ciudad, País<br>
+          Teléfono: +123 456 789
+        </p>
+      </div>
+      <!-- Redes sociales -->
+      <div class="col-md-4 text-center footer-social">
+        <h5>Síguenos</h5>
+        <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+        <a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+        <a href="#" aria-label="Twitter"><i class="bi bi-twitter"></i></a>
+        <a href="#" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
+      </div>
+    </div>
+    <!-- Pie de página -->
+    <div class="footer-bottom">
+      © 2024 Mi Empresa. Todos los derechos reservados.
+    </div>
+  </div>
