--- a/botines.html
+++ b/botines.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zapatillas</title>
+    <title>Botines</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="#">Botines</a></li>
+            <li><a href="zapatillas.html">Zapatillas</a></li>
             <li><a href="#">Ropa</a></li>
         </ul>
         </nav>
@@ -23,16 +23,16 @@
 
     <main>
     <div class="mid">
-        <img src="fotos/zapatillas nike.jpeg">
-        <img src="fotos/zapatillas nike 2.jpg">
-        <img src="fotos/zapatillas nike 3.jpg">
-        <img src="fotos/zapatillas nike 4.jpg">
-        <img src="fotos/zapatillas nike 5.jpg">
-        <img src="fotos/zapatillas-nike-6.jpg">
-        <img src="fotos/zapatillas-nike-7.jpg">
-        <img src="fotos/zapatillas-nike-8.png">
-        <img src="fotos/zapatillas-nike-9.webp">
-        <img src="fotos/zapatillas-nike-10.webp">
+        <img src="fotos/botines-nike-phantom-gx-aca.webp">
+        <img src="fotos/Botines-nike-legend.webp">
+        <img src="fotos/Botines-nike-tiempo-10.jpg">
+        <img src="fotos/Botines-phantom-gx-2.webp">
+        <img src="fotos/nike venom.jpeg">
+        <img src="fotos/nike zoom.jpg">
+        <img src="fotos/Botines-nike-7.webp">
+        <img src="fotos/Botines-nike-8.webp">
+        <img src="fotos/botines-nike-9.webp">
+        <img src="fotos/botines-nike-10.png">
         
     </main>
 
@@ -57,7 +57,7 @@
             <h4>Enlaces Rápidos</h4>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="#">Botines</a></li>
+                <li><a href="zapatillas.html">Zapatillas</a></li>
                 <li><a href="#">Ropa</a></li>
             </ul>
             </div>
