--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#inicio">Inicio</a>
+                        <a class="nav-link" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#nosotros">Zapatillas</a>
+                        <a class="nav-link" href="zapatillas.html">Zapatillas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#servicios">Botines</a>
+                        <a class="nav-link" href="botines.html">Botines</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contacto">Ropa</a>
@@ -42,8 +42,8 @@
     <main class="main-content">
         <div class="image-container">
         <a href="zapatillas.html"> <img src="fotos/fondo-de-zappatillas.jpeg" alt="Imagen zapatillas"></a>
-        <img src="fotos/fondo-de-botines.jpeg" alt="Imagen 2">
-        <img src="fotos/fondo-de-ropa.avif" alt="Imagen 3">
+        <a href="botines.html"><img src="fotos/fondo-de-botines.jpeg" alt="Imagen 2"></a>
+        <a href=""><img src="fotos/fondo-de-ropa.avif" alt="Imagen 3"></a>
         </div>
     </main>
 
@@ -58,17 +58,17 @@
             <div class="footer-section">
             <h4>Redes Sociales</h4>
             <div class="social-icons">
-                <a href="#" class="social-link">Facebook</a>
-                <a href="#" class="social-link">Twitter</a>
-                <a href="#" class="social-link">Instagram</a>
+                <a href="https://www.facebook.com/nike/?locale=es_LA" class="social-link" target="_blank">Facebook</a>
+                <a href="https://x.com/Nike" class="social-link" target="_blank">Twitter</a>
+                <a href="https://www.instagram.com/nike/" class="social-link" target="_blank">Instagram</a>
             </div>
             </div>
             <div class="footer-section">
             <h4>Enlaces Rápidos</h4>
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Zapatillas</a></li>
-                <li><a href="#">Botines</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="zapatillas.html">Zapatillas</a></li>
+                <li><a href="botines.html">Botines</a></li>
                 <li><a href="#">Ropa</a></li>
             </ul>
             </div>
