--- a/ropa.html
+++ b/ropa.html
@@ -1,9 +1,18 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ropa</title>
+    <title>Ropa Nike argentina</title>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="icon" type="image/jpg" href="fotos/Logo_nike_principal.jpg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="NIKE - Moda Actual y Estilo">
+    <meta name="description" content="Descubre las últimas tendencias en moda con nuestra colección de ropa. Encuentra estilos únicos y calidad excepcional para todas las ocasiones.">
+    <meta name="keywords" content="ropa, moda, estilo, tendencias, tienda de ropa, prendas, moda mujer, moda hombre">
+    <meta property="og:title" content="nike argentina - Moda Actual Estilo y comodidad">
+    <meta property="og:description" content="Encuentra ropa moderna y a la moda con nosotros. Tu estilo, nuestra prioridad.">
+    <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRlAHSjq7Gk3-FboSL_OMkC42bdCkxD12e4mw&s">
+    <meta property="og:url" content="http://127.0.0.1:5500/ropa.html">
+
 </head>
 <body>
     
@@ -23,16 +32,17 @@
 
     <main>
     <div class="mid">
-        <img src="fotos/">
-        <img src="fotos/">
-        <img src="fotos/">
-        <img src="fotos/">
-        <img src="fotos/">
-        <img src="fotos/">
-        <img src="fotos/">
-        <img src="fotos/">
-        <img src="fotos/">
-        <img src="fotos/">
+        <img src="fotos/ropa-nike-1.avif" alt="ropa sport girls">
+        <img src="fotos/ropa-nike-2.jpeg" alt="ropa urban sport">
+        <img src="fotos/ropa-nike-3.jpeg" alt="ropa urban black">
+        <img src="fotos/ropa-nike-4.jpeg" alt="ropa kids">
+        <img src="fotos/ropa-nike-5.jpg" alt="ropa urban girls">
+        <img src="fotos/ropa-nike-6.png" alt="winter jacket girl">
+        <img src="fotos/ropa-nike-7.png" alt="hoodie">
+        <img src="fotos/ropa-nike-8.png" alt="hoodie kids ">
+        <img src="fotos/ropa-nike-9.jpeg" alt="comfort clothes">
+        <img src="fotos/ropa-nike-10.png" alt="winter jacket">
+    </div>
     </main>
 
 
